<resources>
    <string name="app_name">currencyConverter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="switch_currency">Switch currency</string>
    <string name="usd">USD</string>
    <string name="default_dollar_amount">500.00</string>
    <string name="dollar_sign">$</string>
    <string name="united_state_dollar">United State Dollar</string>
    <string name="eur">EUR</string>
    <string name="default_euro_amount">468.80</string>
    <string name="euro_sign">€</string>
    <string name="euro">Euro</string>
</resources>