<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/red"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/switchFAB"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:contentDescription="@string/switch_currency"
                android:focusable="true"
                android:rotation="270"
                android:src="@drawable/baseline_compare_arrows_24"
                app:borderWidth="5dp"
                app:fabCustomSize="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:maxImageSize="60dp"
                app:rippleColor="@color/red" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="1dp"
                android:background="@color/red"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/ISOCodeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/usd"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/amountTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_dollar_amount"
                        android:textColor="@color/white"
                        android:textSize="70sp" />

                    <TextView
                        android:id="@+id/currencySignTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/dollar_sign"
                        android:textColor="@color/pink"
                        android:textSize="20sp"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>

                <TextView
                    android:id="@+id/currencyNameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/united_state_dollar"
                    android:textColor="@color/pink"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    android:id="@+id/ISOCodeTV2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/eur"
                    android:textColor="@color/red_2"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/amountTV2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/default_euro_amount"
                        android:textColor="@color/red_2"
                        android:textSize="70sp"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/currencySignTV2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/euro_sign"
                        android:textColor="@color/red_2"
                        android:textSize="20sp"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>

                <TextView
                    android:id="@+id/currencyNameTV2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/euro"
                    android:textColor="@color/red_2"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>